--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,15 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    font-family: 'roboto', sans-serif;
+    font-family: sans-serif;
 
     --header-color: rgb(189, 18, 18);
-    --background: #484D50;
+    --background: rgb(245, 241, 239);
     --footer-color: #171717;
     --tittle-color: #ffc222;
+    --ancora-color: rebeccapurple;
     --paragrafo-color: rgb(255, 255, 255);
-    --bordaicone: ;
+    --button-color: rgb(87, 206, 87);
 }
 
 html {
@@ -56,6 +57,10 @@ header nav ul{
     gap: 20px;
 
 }
+nav ul li a{
+    font-size: 1.3rem;
+
+}
 
 
 /* Menu toggle mobile */
@@ -85,6 +90,7 @@ header div img{
 
 /* index */
 
+/* Banner */
 #banner{
     width: 100%;
     height: 95vh;
@@ -132,6 +138,8 @@ header div img{
     color: white;
 }
 
+/* content */
+
 #content{
     padding: 20px;
 
@@ -142,6 +150,12 @@ header div img{
     gap: 20px;
 }    
 
+#content h3{ 
+    font-size: 3rem;
+}
+
+/* content cards */
+
 .container-card {
     padding: 10px;
     display: flex;
@@ -149,16 +163,22 @@ header div img{
     justify-content: center;
     align-items: center;
     gap: 20px;
+
 }
 
 
 .card {
     border-radius: 10px;
     width: 350px;
-   display: flex;
-   flex-direction: column;
-   gap:20px;
-   
+    height: 717.3; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    text-align: center;
+
+    background-color: var(--background);
+    
 }
 
 .img-card {
@@ -168,14 +188,37 @@ header div img{
     border-top-right-radius: 10px;
 }
 
+.card h4 {
+    font-size: 1.3rem;
+    font-weight: 600;
+    padding: 20px;
+}
+
+.card button{
+    width: 335px;
+    height: 59.3px;
+    border-radius: 10px;
+
+    font-size: 1.1rem;
+
+    color: white; 
+    background-color: var(--button-color);
+    border: none;
+    
+}
 
 
-/* Formulario */
+/* Login */
+.logo__login {
+    width: 150px;
+    height: auto;
+}
+
 
 /* Details */
 #banner2 div img {
     width: 100%;
-    height: 95vh;    
+        
 }
 
 #iframefc5 iframe{
@@ -184,6 +227,10 @@ header div img{
     
     border-radius: 12px;
     
+}
+
+.destaq {
+    color: red;
 }
 
 /* Footer */
@@ -233,7 +280,6 @@ footer{
     display: flex;
     gap: 16px;
 }
-
 
 
 footer div span{
