--- a/css/responsive.css
+++ b/css/responsive.css
@@ -17,3 +17,11 @@ header nav{
     justify-content: space-between;
 }
 }
+
+@media (min-width: 1520px){
+    .container-card {
+        width: 80%;
+        gap: 40px;
+    }
+
+}
