--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     font-family: 'Roboto Condensed', sans-serif;
 
     --header-color: rgb(189, 18, 18);
-    --background: rgb(245, 241, 239);
+    --background: #f4f4f4;
     --footer-color: #171717;
     --tittle-color: #ffc222;
     --ancora-color: rebeccapurple;
@@ -20,11 +20,11 @@
 html {
     width: 100%;
     height: auto;
-    
+   
     scroll-behavior: smooth;
    
 }
-
+/* Config Pag */
 button{
     cursor: pointer;
 }
@@ -37,7 +37,7 @@ a{
 ul{
     list-style: none;
 }
-
+/* Header */
 header{
     height: 5vh;
     width: 100%;
@@ -85,15 +85,14 @@ nav ul li a{
     align-items: center;
     gap: 6px;
 }
-
+/* logo header */
 header div img{
     height: 5vh;
 }
 
-
 /* index */
 
-/* Banner */
+/* Banner Index */
 #banner{
     margin-top: 60px;
     width: 100%;
@@ -202,6 +201,10 @@ header div img{
     font-size: 1.3rem;
     font-weight: 600;
     padding: 20px;
+    color: #000;
+    font-family: sans-serif;
+    font-style: italic;
+    font-weight: bold;
 }
 
 .card button{
@@ -228,15 +231,16 @@ header div img{
 
 }
 
-/* Details */
+/* DetailsFC5 */
 #banner2 div img {
     width: 100%;
+    height: 100vh;
         
 }
 
 #iframefc5 iframe{
-    width: 778px;
-    height: 500px;
+    width: 77.8rem;
+    height: 70vh;
     
     border-radius: 12px;
 }
@@ -248,6 +252,7 @@ header div img{
 main {
     display: flex;
     flex-direction: column;
+    background-color: #e5e5e5;
 }
 
 /* login */
@@ -283,7 +288,7 @@ footer{
 }
 
 .content-integrants p a{
-    font-size: 0.8rem;
+    font-size: 1rem;
     color: rgba(255, 255, 255, 0.5);
 }
 
