--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,74 @@ main {
 }
 
 /* login */
+.login{
+    margin-top: 60px;
+    height: 95vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap:20px;
+    
+
+    background-image: url(../img/header/Banner.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.login form {
+    width: 90%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px ;
+
+    background-color: var(--background);
+    padding: 40px;
+    border-radius: 40px;
+    
+}
+
+form legend{
+    align-self: flex-start;
+    font-size: 4rem;
+    font-weight: 600;
+}
+
+
+.login form div{
+    width: 100%;
+    height: 70px;
+    
+}
+
+.login input{
+    width: 100%;
+    height: 70px;
+    border-radius: 10px;
+    border: solid 1px;
+    padding: 10px;
+
+    font-size: 1rem;
+
+}
+
+#btn{
+    width: 100%;
+    height: 70px;
+   
+    border-radius: 10px;
+    border: solid var(--header-color) 3px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+
+    font-size: 2rem;
+}
 
 
 /* Footer */
