--- a/css/details.css
+++ b/css/details.css
@@ -53,8 +53,13 @@ header nav ul {
 
   gap: 20px;
 }
+
 nav ul li a {
-  font-size: 1.3rem;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
+
   color: white;
 }
 
@@ -99,33 +104,37 @@ main {
   margin: 32px 112px;
 }
 
-#tittle {
+.tittle_details {
   font-size: 64px;
   color: rgb(3, 2, 37);
   font-family: 'roboto';
   line-height: 75px;
 }
 
-#content__description {
-    margin: 32px 0px;
+.content__description {
+  margin: 32px 0px;
 }
 
 .p__details {
-  height: 84px;
+  height: 100%;
   width: 100%;
 
   font-family: Roboto;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
-  color: #000000BF;
+  color: #000000bf;
 }
 
-#iframefc5 iframe {
+.iframefc iframe {
   width: 100%;
-  height: 600px;
+  height: 580px;
 
   border-radius: 12px;
+}
+
+.span__tittle {
+  color: red;
 }
 
 .destaq {
