--- a/css/style.css
+++ b/css/style.css
@@ -1,382 +1,377 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    font-family: 'Roboto Condensed', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: 'Roboto Condensed', sans-serif;
 
-    --header-color: rgb(189, 18, 18);
-    --background: #f4f4f4;
-    --footer-color: #171717;
-    --tittle-color: #ffc222;
-    --ancora-color: rebeccapurple;
-    --paragrafo-color: rgb(255, 255, 255);
-    --button-color: rgb(87, 206, 87);
-    --disable-color: grey;
+  --header-color: rgb(189, 18, 18);
+  --background: #f4f4f4;
+  --footer-color: #171717;
+  --tittle-color: #ffc222;
+  --ancora-color: rebeccapurple;
+  --paragrafo-color: rgb(255, 255, 255);
+  --button-color: rgb(87, 206, 87);
+  --disable-color: grey;
 }
 
 html {
-    width: 100%;
-    height: auto;
-   
-    scroll-behavior: smooth;
-   
+  width: 100%;
+  height: auto;
+
+  scroll-behavior: smooth;
 }
 /* Config Pag */
-button{
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
 
-a{
-    text-decoration: none;
-    color: white;
+a {
+  text-decoration: none;
+  color: white;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
 /* Header */
-header{
-    height: 5vh;
-    width: 100%;
-    background-color:var(--header-color);
-    padding: 30px;
+header {
+  height: 5vh;
+  width: 100%;
+  background-color: var(--header-color);
+  padding: 30px;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
 }
 
-header nav{
-    display: none;
+header nav {
+  display: none;
 }
 
-header nav ul{
-    display: flex;
-    
-    gap: 20px;
+header nav ul {
+  display: flex;
 
+  gap: 20px;
 }
-nav ul li a{
-    font-size: 1.3rem;
+nav ul li a {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21px;
 
+  color: #e5e5e5;
 }
-
 
 /* Menu toggle mobile */
 
 .one,
 .two,
 .three {
-    background-color: #000;
-    height: 4px;
-    width: 100%;
-      
-} 
+  background-color: #000;
+  height: 4px;
+  width: 100%;
+}
 
 .menu-toggle {
-    width: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 6px;
+  width: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
 }
 /* logo header */
-header div img{
-    height: 5vh;
+header div img {
+  height: 5vh;
 }
 
 /* index */
 
 /* Banner Index */
-#banner{
-    margin-top: 60px;
-    width: 100%;
-    height: 95vh;
-    background-image: url(../img/header/Banner.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+#banner {
+  margin-top: 60px;
+  width: 100%;
+  height: 95vh;
+  background-image: url(../img/header/viloes.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 
-    color: white;
-    text-align: center;
-    padding: 10px;
-    
+  color: white;
+  text-align: center;
+  padding: 10px;
 }
 
-#banner div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+#banner div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
-#banner h2{
-    align-self: flex-start;
-    font-size: 3rem;
-    color: var(--tittle-color);
+#banner h2 {
+  align-self: flex-start;
+  font-size: 3rem;
+  color: var(--tittle-color);
 }
 
-#banner p{
-    font-size: 1.5rem;
+#banner p {
+  font-size: 1.5rem;
 }
 
-#banner button{
-    width: 322px;
-    height: 71px;
+#banner button {
+  width: 322px;
+  height: 71px;
 
-    font-size: 2rem;
+  font-size: 2rem;
 
-    border-radius: 10px;
-    border: solid var(--tittle-color) 2px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
+  border-radius: 10px;
+  border: solid var(--tittle-color) 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
 }
 
 /* content */
 
-#content{
-    padding: 20px;
+#content {
+  padding: 20px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
 
-#content h3{ 
-    font-size: 3rem;
+#content h3 {
+  font-size: 3rem;
 }
 
 /* content cards */
 
 #content h3 {
-    color: var(--tittle-color);
+  color: var(--tittle-color);
 }
 
 .container-card {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
-
 .card {
-    border-radius: 10px;
-    width: 350px;
-    height: 717.3; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    text-align: center;
+  border-radius: 10px;
+  width: 350px;
+  height: 717.3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 
-    background-color: var(--background);
-    
+  text-align: center;
+
+  background-color: var(--background);
 }
 
 .img-card {
-    width: 100%;
-    height: 350px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+  width: 100%;
+  height: 350px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .card h4 {
-    font-size: 1.3rem;
-    font-weight: 600;
-    padding: 20px;
-    color: #000;
-    font-family: sans-serif;
-    font-style: italic;
-    font-weight: bold;
+  font-size: 1.3rem;
+  font-weight: 600;
+  padding: 20px;
+  color: #000;
+  font-family: sans-serif;
+  font-style: italic;
+  font-weight: bold;
 }
 
-.card button{
-    width: 335px;
-    height: 59.3px;
-    border-radius: 10px;
+.card p {
+  height: 152rem;
+  padding: 10px;
+}
+.card button {
+  width: 335px;
+  height: 59.3px;
+  border-radius: 10px;
 
-    font-size: 1.1rem;
+  font-size: 1.1rem;
 
-    color: white; 
-    background-color: var(--button-color);
-    border: none;
-    
+  color: white;
+  background-color: var(--button-color);
+  border: none;
 }
 
-.card button:disabled{
-    background-color: var(--disable-color);
+.card button:disabled {
+  background-color: var(--disable-color);
 
-    cursor: not-allowed;
+  cursor: not-allowed;
 }
 
-.card button a:disabled{
-    cursor: not-allowed;
-
+.card button a:disabled {
+  cursor: not-allowed;
 }
 
-/* DetailsFC5 */
+/* Details */
 #banner2 div img {
-    width: 100%;
-    height: 100vh;
-        
+  width: 100%;
+  height: 100vh;
 }
 
-#iframefc5 iframe{
-    width: 77.8rem;
-    height: 70vh;
-    
-    border-radius: 12px;
+#iframefc5 iframe {
+  width: 77.8rem;
+  height: 70vh;
+
+  border-radius: 12px;
 }
 
 .destaq {
-    color: red;
+  color: red;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    background-color: #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  background-color: #e5e5e5;
 }
 
 /* login */
-.login{
-    margin-top: 60px;
-    height: 95vh;
+.login {
+  margin-top: 60px;
+  height: 95vh;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap:20px;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 
-    background-image: url(../img/header/Banner.png);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-
+  background-image: url(../img/viloes.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .login form {
-    width: 90%;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 50px ;
+  width: 90%;
 
-    background-color: var(--background);
-    padding: 40px;
-    border-radius: 40px;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+
+  background-color: var(--background);
+  padding: 40px;
+  border-radius: 40px;
 }
 
-form legend{
-    align-self: flex-start;
-    font-size: 4rem;
-    font-weight: 600;
+#logo__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.login form div{
-    width: 100%;
-    height: 70px;
-    
+.logo__form {
+  width: 33vw;
+  height: 85px;
 }
 
-.login input{
-    width: 100%;
-    height: 70px;
-    border-radius: 10px;
-    border: solid 1px;
-    padding: 10px;
-
-    font-size: 1rem;
-
+.login form div {
+  width: 100%;
+  height: 80px;
 }
 
-#btn{
-    width: 100%;
-    height: 70px;
-   
-    border-radius: 10px;
-    border: solid var(--header-color) 3px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
+.login input {
+  width: 100%;
+  height: 70px;
+  border-radius: 10px;
+  border: solid 1px;
+  padding: 10px;
 
-    font-size: 2rem;
+  font-size: 1rem;
 }
 
+#btn {
+  width: 100%;
+  height: 70px;
+
+  border-radius: 10px;
+  border: solid var(--header-color) 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+
+  font-size: 2rem;
+}
 
 /* Footer */
-footer{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 50px;
-    align-items: center;
-    background-color: var(--footer-color);
-    padding: 20px;
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+  align-items: center;
+  background-color: var(--footer-color);
+  padding: 20px;
 }
 
-.conteiner-integrants{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+.conteiner-integrants {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 
-    padding: 20px;
+  padding: 20px;
 
-    color: var(--paragrafo-color);
+  color: var(--paragrafo-color);
 }
 
-.content-integrants h3{
-    font-size: 1.5rem;
-    color: white;
+.content-integrants h3 {
+  font-size: 1.5rem;
+  color: white;
 }
 
-.content-integrants p a{
-    font-size: 1rem;
-    color: rgba(255, 255, 255, 0.5);
+.content-integrants p a {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.5);
 }
 
-.content-integrants{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+.content-integrants {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
-.content-integrants div{
-    display: flex;
-    gap: 16px;
+.content-integrants div {
+  display: flex;
+  gap: 16px;
 }
 
-
-footer div{
-    font-size: 1.5rem;
-    color: rgba(255, 255, 255, 0.5);
-    padding: 20px;
-    text-align: center;
+footer div {
+  font-size: 1.5rem;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 20px;
+  text-align: center;
 }
