--- a/css/details.css
+++ b/css/details.css
@@ -86,7 +86,7 @@ header div img {
   height: 5vh;
 }
 
-/* DetailsFC5 */
+/* Details */
 
 main {
   width: 100%;
@@ -124,6 +124,7 @@ main {
   font-weight: 400;
   line-height: 21px;
   color: #000000bf;
+  padding: 5px;
 }
 
 .iframefc iframe {
@@ -139,6 +140,13 @@ main {
 
 .destaq {
   color: red;
+  height: 100%;
+  width: 100%;
+
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 21px;
 }
 
 #container__info {
