--- a/css/details.css
+++ b/css/details.css
@@ -87,6 +87,39 @@ header div img {
 }
 
 /* Details */
+.bannerdetails{
+
+  width: 100%;
+  height: 100vh;
+  
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#banner-FC1{
+  background-image: url(../img/cards/banner_FC1.jpg);
+}
+
+#banner-FC2{
+  background-image: url(../img/cards/banner_FC2.png);
+}
+
+#banner-FC3{
+  background-image: url(../img/cards/banner_FC3.png);
+}
+
+#banner-FC4{
+  background-image: url(../img/cards/banner_FC4.png);
+}
+
+#banner-F5{
+  background-image: url(../img/cards/banner_FC5.jpg);
+}
+
+#banner-FC6{
+  background-image: url(../img/cards/banner_FC6.png);
+}
 
 main {
   width: 100%;
@@ -124,7 +157,7 @@ main {
   font-weight: 400;
   line-height: 21px;
   color: #000000bf;
-  padding: 5px;
+
 }
 
 .iframefc iframe {
@@ -151,6 +184,7 @@ main {
 
 #container__info {
   display: flex;
+  flex-direction: column;
 }
 
 .infos {
