--- a/css/animacoes.css
+++ b/css/animacoes.css
@@ -1,15 +1,34 @@
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    font-family: 'Roboto Condensed', sans-serif;
+  
+    --header-color: rgb(189, 18, 18);
+    --background: #f4f4f4;
+    --footer-color: #171717;
+    --tittle-color: #ffc222;
+    --ancora-color: rebeccapurple;
+    --paragrafo-color: rgb(255, 255, 255);
+    --button-color: rgb(87, 206, 87);
+    --disable-color: grey;
+}
+
 /* Header nav */
 nav ul li a:hover{
     transition: .3s;
 
     color: var(--tittle-color);
-
 }
 
 /* logo header */
 .stars_logo:hover {
     transform: rotate(360deg);
     
+    
+
     transition: .8s;
 }
 
@@ -33,7 +52,7 @@ nav ul li a:hover{
 
 /* login */
 #btn:hover{
-    background-color: var(--header-color);
+    background-color: var(--button-color);
 }
 
 input:invalid:not(:focus):not(:placeholder-shown){
