Finalização agora vai

--- a/css/details.css
+++ b/css/details.css
@@ -104,15 +104,15 @@ header div img {
 }
 
 #banner-FC2 {
-  background-image: url(../img/cards/banner_FC2.png);
+  background-image: url(../img/cards/Banner_FC2.png);
 }
 
 #banner-FC3 {
-  background-image: url(../img/cards/banner_FC3.png);
+  background-image: url(../img/cards/Banner_FC3.png);
 }
 
 #banner-FC4 {
-  background-image: url(../img/cards/banner_FC4.png);
+  background-image: url(../img/cards/Banner_FC4.png);
 }
 
 #banner-FC5 {
@@ -120,7 +120,7 @@ header div img {
 }
 
 #banner-FC6 {
-  background-image: url(../img/cards/banner_FC6.png);
+  background-image: url(../img/cards/Banner_FC6.png);
 }
 
 main {
